--- a/Client/ionic-application/package.json
+++ b/Client/ionic-application/package.json
@@ -19,10 +19,11 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
-    "@capacitor/app": "1.0.3",
+    "@capacitor/app": "^1.0.3",
     "@capacitor/core": "3.2.4",
     "@capacitor/haptics": "1.1.0",
     "@capacitor/keyboard": "1.1.0",
+    "@capacitor/network": "^1.0.6",
     "@capacitor/status-bar": "1.0.3",
     "@ionic/angular": "^5.5.2",
     "ngx-cookie-service": "^13.0.0",
