Login on frontend implemented by storing to internal storage

--- a/Client/ionic-application/package.json
+++ b/Client/ionic-application/package.json
@@ -25,6 +25,7 @@
     "@capacitor/keyboard": "1.1.0",
     "@capacitor/network": "^1.0.6",
     "@capacitor/status-bar": "1.0.3",
+    "@capacitor/storage": "^1.2.3",
     "@ionic/angular": "^5.5.2",
     "ngx-cookie-service": "^13.0.0",
     "rxjs": "~6.6.0",
