--- a/Client/ionic-application/package.json
+++ b/Client/ionic-application/package.json
@@ -20,13 +20,16 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@capacitor/app": "^1.0.3",
+    "@capacitor/camera": "^1.2.1",
     "@capacitor/core": "3.2.4",
+    "@capacitor/filesystem": "^1.0.6",
     "@capacitor/haptics": "1.1.0",
     "@capacitor/keyboard": "1.1.0",
     "@capacitor/network": "^1.0.6",
     "@capacitor/status-bar": "1.0.3",
     "@capacitor/storage": "^1.2.3",
     "@ionic/angular": "^5.5.2",
+    "@ionic/pwa-elements": "^3.0.2",
     "ngx": "^2.4.0",
     "ngx-cookie-service": "^13.0.0",
     "ngx-pagination": "^5.1.1",
