--- a/Client/ionic-application/package.json
+++ b/Client/ionic-application/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "1.1.0",
     "@angular/common": "~12.1.1",
     "@angular/core": "~12.1.1",
     "@angular/forms": "~12.1.1",
@@ -23,6 +24,7 @@
     "@capacitor/camera": "^1.2.1",
     "@capacitor/core": "3.2.4",
     "@capacitor/filesystem": "^1.0.6",
+    "@capacitor/geolocation": "^1.2.0",
     "@capacitor/haptics": "1.1.0",
     "@capacitor/keyboard": "1.1.0",
     "@capacitor/network": "^1.0.6",
@@ -49,6 +51,7 @@
     "@angular/language-service": "~12.0.1",
     "@capacitor/cli": "3.2.4",
     "@ionic/angular-toolkit": "^4.0.0",
+    "@types/googlemaps": "3.39.12",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
