--- a/Client/ionic-application/tsconfig.app.json
+++ b/Client/ionic-application/tsconfig.app.json
@@ -2,8 +2,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "skipLibCheck": true,
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": ["googlemaps"]
   },
   "files": [
     "src/main.ts",
